# async-rtos-showdown

./: README.md
c/: .cproject  .mxproject  .project  STM32F446ZETX_FLASH.ld  STM32F446ZETX_RAM.ld  blog-rtos-test Debug.launch  blog-rtos-test Release.launch  blog-rtos-test.ioc
c/Core/Inc/: main.h  stm32f4xx_it.h
c/Core/Src/: freertos.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
rtic/: Cargo.toml
rtic/.cargo/: config.toml
rtic/src/: main.rs
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: main.rs
